--- a/heliotrope/adapters/endpoint/about.html
+++ b/heliotrope/adapters/endpoint/about.html
@@ -31,17 +31,18 @@
         function updateStatus() {
             const statusElement = document.getElementById('status');
             const checkedElement = document.getElementById('checked');
+            const lang = mirroringProgress.index_files.map(i => /index-(.+).nozomi/.exec(i)[1]).join(", ")
             if (mirroringProgress.is_mirroring_galleryinfo) {
-                statusElement.innerText = "Currently mirroring Galleryinfo...";
+                statusElement.innerText = `Currently mirroring  ${lang} Galleryinfo ...`;
                 checkedElement.innerText = `I am mirroring ${mirroringProgress.total} works, and ${mirroringProgress.job_completed} out of ${mirroringProgress.job_total} jobs have been completed.`;
             } else if (mirroringProgress.is_converting_to_info) {
-                statusElement.innerText = "Currently converting to info...";
+                statusElement.innerText = `Currently converting to ${lang} info`;
                 checkedElement.innerText = `I am converting ${mirroringProgress.total} works, and ${mirroringProgress.job_completed} out of ${mirroringProgress.job_total} jobs have been completed.`;
             } else if (mirroringProgress.is_integrity_checking) {
-                statusElement.innerText = "Currently checking integrity...";
+                statusElement.innerText = `Currently checking integrity ${lang} galleryinfo`;
                 checkedElement.innerText = `I am checking ${mirroringProgress.total} works, and ${mirroringProgress.job_completed} out of ${mirroringProgress.job_total} jobs have been completed.`;
             } else {
-                statusElement.innerText = "Currently I'm idle";
+                statusElement.innerText = `Currently I'm idle and i mirrored with the following languages: ${lang}`;
                 if (mirroringProgress.mirrored === 0) {
                     checkedElement.innerText = `I last checked on ${mirroringProgress.last_checked} and no works have been mirrored yet. were last mirrored on ${mirroringProgress.last_mirrored}.`
                     return;
