--- a/heliotrope/adapters/endpoint/about.html
+++ b/heliotrope/adapters/endpoint/about.html
@@ -7,13 +7,13 @@
     <title>Heliotrope</title>
     <script>
         let isMirroring = false;
-        let mirroringProgress = {};
+        let mirroringStatus = {};
         let intervalId;
 
-        async function fetchProgress() {
-            const response = await fetch('/api/progress');
-            mirroringProgress = await response.json();
-            if (!mirroringProgress.is_mirroring_galleryinfo && !mirroringProgress.is_converting_to_info) {
+        async function fetchStatus() {
+            const response = await fetch('/api/status');
+            mirroringStatus = await response.json();
+            if (!mirroringStatus.is_mirroring_galleryinfo && !mirroringStatus.is_converting_to_info) {
                 isMirroring = false;
                 if (intervalId) {
                     clearInterval(intervalId);
@@ -22,7 +22,7 @@
             } else {
                 isMirroring = true;
                 if (!intervalId) {
-                    intervalId = setInterval(fetchProgress, 5000);
+                    intervalId = setInterval(fetchStatus, 5000);
                 }
             }
             updateStatus();
@@ -31,28 +31,28 @@
         function updateStatus() {
             const statusElement = document.getElementById('status');
             const checkedElement = document.getElementById('checked');
-            const lang = mirroringProgress.index_files.map(i => /index-(.+).nozomi/.exec(i)[1]).join(", ")
-            if (mirroringProgress.is_mirroring_galleryinfo) {
+            const lang = mirroringStatus.index_files.map(i => /index-(.+).nozomi/.exec(i)[1]).join(", ")
+            if (mirroringStatus.is_mirroring_galleryinfo) {
                 statusElement.innerText = `Currently mirroring  ${lang} Galleryinfo ...`;
-                checkedElement.innerText = `I am mirroring ${mirroringProgress.total} works, and ${mirroringProgress.job_completed} out of ${mirroringProgress.job_total} jobs have been completed.`;
-            } else if (mirroringProgress.is_converting_to_info) {
+                checkedElement.innerText = `I am mirroring ${mirroringStatus.total} works, and ${mirroringStatus.job_completed} out of ${mirroringStatus.job_total} jobs have been completed.`;
+            } else if (mirroringStatus.is_converting_to_info) {
                 statusElement.innerText = `Currently converting to ${lang} info`;
-                checkedElement.innerText = `I am converting ${mirroringProgress.total} works, and ${mirroringProgress.job_completed} out of ${mirroringProgress.job_total} jobs have been completed.`;
-            } else if (mirroringProgress.is_integrity_checking) {
+                checkedElement.innerText = `I am converting ${mirroringStatus.total} works, and ${mirroringStatus.job_completed} out of ${mirroringStatus.job_total} jobs have been completed.`;
+            } else if (mirroringStatus.is_integrity_checking) {
                 statusElement.innerText = `Currently checking integrity ${lang} galleryinfo`;
-                checkedElement.innerText = `I am checking ${mirroringProgress.total} works, and ${mirroringProgress.job_completed} out of ${mirroringProgress.job_total} jobs have been completed.`;
+                checkedElement.innerText = `I am checking ${mirroringStatus.total} works, and ${mirroringStatus.job_completed} out of ${mirroringStatus.job_total} jobs have been completed.`;
             } else {
                 statusElement.innerText = `Currently I'm idle and i mirrored with the following languages: ${lang}`;
-                if (mirroringProgress.mirrored === 0) {
-                    checkedElement.innerText = `I last checked on ${mirroringProgress.last_checked} and no works have been mirrored yet. were last mirrored on ${mirroringProgress.last_mirrored}.`
+                if (mirroringStatus.mirrored === 0) {
+                    checkedElement.innerText = `I last checked on ${mirroringStatus.last_checked} and no works have been mirrored yet. were last mirrored on ${mirroringStatus.last_mirrored}.`
                     return;
                 }
-                checkedElement.innerText = `I last checked on ${mirroringProgress.last_checked} and ${mirroringProgress.mirrored} works were last mirrored on ${mirroringProgress.last_mirrored}.`
+                checkedElement.innerText = `I last checked on ${mirroringStatus.last_checked} and ${mirroringStatus.mirrored} works were last mirrored on ${mirroringStatus.last_mirrored}.`
             }
         }
 
         // Initial fetch
-        fetchProgress();
+        fetchStatus();
     </script>
 </head>
 
