--- a/heliotrope/adapters/endpoint/about.html
+++ b/heliotrope/adapters/endpoint/about.html
@@ -34,20 +34,20 @@
             const lang = mirroringStatus.index_files.map(i => /index-(.+).nozomi/.exec(i)[1]).join(", ")
             if (mirroringStatus.is_mirroring_galleryinfo) {
                 statusElement.innerText = `Currently mirroring  ${lang} Galleryinfo ...`;
-                checkedElement.innerText = `I am mirroring ${mirroringStatus.total} works, and ${mirroringStatus.job_completed} out of ${mirroringStatus.job_total} jobs have been completed.`;
+                checkedElement.innerText = `I am mirroring ${mirroringStatus.total_items} works, and ${mirroringStatus.batch_completed} out of ${mirroringStatus.batch_total} jobs have been completed.`;
             } else if (mirroringStatus.is_converting_to_info) {
                 statusElement.innerText = `Currently converting to ${lang} info`;
-                checkedElement.innerText = `I am converting ${mirroringStatus.total} works, and ${mirroringStatus.job_completed} out of ${mirroringStatus.job_total} jobs have been completed.`;
-            } else if (mirroringStatus.is_integrity_checking) {
+                checkedElement.innerText = `I am converting ${mirroringStatus.total_items} works, and ${mirroringStatus.batch_completed} out of ${mirroringStatus.batch_total} jobs have been completed.`;
+            } else if (mirroringStatus.is_checking_integrity) {
                 statusElement.innerText = `Currently checking integrity ${lang} galleryinfo`;
-                checkedElement.innerText = `I am checking ${mirroringStatus.total} works, and ${mirroringStatus.job_completed} out of ${mirroringStatus.job_total} jobs have been completed.`;
+                checkedElement.innerText = `I am checking ${mirroringStatus.total_items} works, and ${mirroringStatus.batch_completed} out of ${mirroringStatus.batch_total} jobs have been completed.`;
             } else {
-                statusElement.innerText = `Currently I'm idle and i mirrored with the following languages: ${lang}`;
-                if (mirroringStatus.mirrored === 0) {
-                    checkedElement.innerText = `I last checked on ${mirroringStatus.last_checked} and no works have been mirrored yet. were last mirrored on ${mirroringStatus.last_mirrored}.`
+                statusElement.innerText = `Currently I'm idle and i items_processed with the following languages: ${lang}`;
+                if (mirroringStatus.items_processed === 0) {
+                    checkedElement.innerText = `I last checked on ${mirroringStatus.last_checked_at} and no works have been items_processed yet. were last items_processed on ${mirroringStatus.last_mirrored_at}.`
                     return;
                 }
-                checkedElement.innerText = `I last checked on ${mirroringStatus.last_checked} and ${mirroringStatus.mirrored} works were last mirrored on ${mirroringStatus.last_mirrored}.`
+                checkedElement.innerText = `I last checked on ${mirroringStatus.last_checked_at} and ${mirroringStatus.items_processed} works were last items_processed on ${mirroringStatus.last_mirrored_at}.`
             }
         }
 
